api_versioned_docs/version-12.0.0/avalonia/media/imaging/index.mdx
---
title: 'Avalonia.Media.Imaging'
hide_title: true
slug: '/avalonia/media/imaging'
uid: 'Avalonia.Media.Imaging'
commentId: 'N:Avalonia.Media.Imaging'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Base'
apiKind: 'Namespace'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Media.Imaging'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">Imaging Namespace</h1>

<div className="apiref-page__lead">

Namespace `Avalonia.Media.Imaging`

</div>

## Types

- [Bitmap](bitmap.mdx) - Holds a bitmap image.
- [BitmapBlendingMode](bitmapblendingmode.mdx) - Controls the way the bitmaps are drawn together.
- [BitmapInterpolationMode](bitmapinterpolationmode.mdx) - Controls the performance and quality of bitmap scaling.
- [CroppedBitmap](croppedbitmap.mdx) - Crops a Bitmap.
- [PixelFormatReader.Bgr24PixelFormatReader](pixelformatreader-bgr24pixelformatreader.mdx)
- [PixelFormatReader.Bgr32PixelFormatReader](pixelformatreader-bgr32pixelformatreader.mdx)
- [PixelFormatReader.Bgr555PixelFormatReader](pixelformatreader-bgr555pixelformatreader.mdx)
- [PixelFormatReader.Bgr565PixelFormatReader](pixelformatreader-bgr565pixelformatreader.mdx)
- [PixelFormatReader.Bgra8888PixelFormatReader](pixelformatreader-bgra8888pixelformatreader.mdx)
- [PixelFormatReader.BlackWhitePixelFormatReader](pixelformatreader-blackwhitepixelformatreader.mdx)
- [PixelFormatReader.Gray16PixelFormatReader](pixelformatreader-gray16pixelformatreader.mdx)
- [PixelFormatReader.Gray2PixelFormatReader](pixelformatreader-gray2pixelformatreader.mdx)
- [PixelFormatReader.Gray32FloatPixelFormatReader](pixelformatreader-gray32floatpixelformatreader.mdx)
- [PixelFormatReader.Gray4PixelFormatReader](pixelformatreader-gray4pixelformatreader.mdx)
- [PixelFormatReader.Gray8PixelFormatReader](pixelformatreader-gray8pixelformatreader.mdx)
- [PixelFormatReader.Rgb24PixelFormatReader](pixelformatreader-rgb24pixelformatreader.mdx)
- [PixelFormatReader.Rgb32PixelFormatReader](pixelformatreader-rgb32pixelformatreader.mdx)
- [PixelFormatReader.Rgba64PixelFormatReader](pixelformatreader-rgba64pixelformatreader.mdx)
- [PixelFormatReader.Rgba8888PixelFormatReader](pixelformatreader-rgba8888pixelformatreader.mdx)
- [PixelFormatWriter.Bgr24PixelFormatWriter](pixelformatwriter-bgr24pixelformatwriter.mdx)
- [PixelFormatWriter.Bgr32PixelFormatWriter](pixelformatwriter-bgr32pixelformatwriter.mdx)
- [PixelFormatWriter.Bgr555PixelFormatWriter](pixelformatwriter-bgr555pixelformatwriter.mdx)
- [PixelFormatWriter.Bgr565PixelFormatWriter](pixelformatwriter-bgr565pixelformatwriter.mdx)
- [PixelFormatWriter.Bgra32PixelFormatWriter](pixelformatwriter-bgra32pixelformatwriter.mdx)
- [PixelFormatWriter.Bgra8888PixelFormatWriter](pixelformatwriter-bgra8888pixelformatwriter.mdx)
- [PixelFormatWriter.BlackWhitePixelFormatWriter](pixelformatwriter-blackwhitepixelformatwriter.mdx)
- [PixelFormatWriter.Gray16PixelFormatWriter](pixelformatwriter-gray16pixelformatwriter.mdx)
- [PixelFormatWriter.Gray2PixelFormatWriter](pixelformatwriter-gray2pixelformatwriter.mdx)
- [PixelFormatWriter.Gray32FloatPixelFormatWriter](pixelformatwriter-gray32floatpixelformatwriter.mdx)
- [PixelFormatWriter.Gray4PixelFormatWriter](pixelformatwriter-gray4pixelformatwriter.mdx)
- [PixelFormatWriter.Gray8PixelFormatWriter](pixelformatwriter-gray8pixelformatwriter.mdx)
- [PixelFormatWriter.Rgb24PixelFormatWriter](pixelformatwriter-rgb24pixelformatwriter.mdx)
- [PixelFormatWriter.Rgb32PixelFormatWriter](pixelformatwriter-rgb32pixelformatwriter.mdx)
- [PixelFormatWriter.Rgba64PixelFormatWriter](pixelformatwriter-rgba64pixelformatwriter.mdx)
- [PixelFormatWriter.Rgba8888PixelFormatWriter](pixelformatwriter-rgba8888pixelformatwriter.mdx)
- [RenderTargetBitmap](rendertargetbitmap.mdx) - A bitmap that holds the rendering of a [Avalonia.Visual](xref:Avalonia.Visual).
- [WriteableBitmap](writeablebitmap.mdx) - Holds a writeable bitmap image.
</ApiRefPage>

